[metadata]
name = rsp_data_exporter

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[coverage:run]
branch = True
omit = src/db/env.py,src/db/versions/*  # define paths to omit

[coverage:report]
show_missing = True
skip_covered = True

# For local coverage execution
[tool:pytest]
addopts = --cov tests/